--- a/src/desktop/components/prevent_right_click/index.jade
+++ b/src/desktop/components/prevent_right_click/index.jade
@@ -1,7 +1,7 @@
 script.
-  var isAdmin = #{!!(user && user.get('type') === 'Admin')};
+  var isAdminOrTeam = #{!!(user && (user.get('type') === 'Admin' || user.get('type') === 'Team'))};
   document.addEventListener('contextmenu', function(e) {
-    if (isAdmin) return;
+    if (isAdminOrTeam) return;
     if (['IMG', 'CANVAS'].indexOf(e.target.nodeName) < 0) return;
     var classes = e.target.className + ' ' + e.target.parentElement.className;
     if (classes.match('seadragon')) e.preventDefault();
